Fix spacing above let's chat link.

--- a/scss/partials/_static_pages.scss
+++ b/scss/partials/_static_pages.scss
@@ -608,7 +608,7 @@ div.pricing-subheadline {
   font-size: 22px;
   line-height: 28px;
   @include OC_Body_Book();
-  margin: 24px auto 0px;
+  margin: 40px auto 0px;
   position: relative;
   max-width: 630px;
 
